--- a/dom/append.html
+++ b/dom/append.html
@@ -40,14 +40,15 @@
 
 
     // 場所を指定して要素を追加したい時
-    const targetList = document.getElementById('divList');
+    // const targetList = document.getElementById('divList');
+    const targetList = document.getElementById('divList').firstElementChild; // 最初の子要素を取得
     // const reference = document.querySelector('.div2');
-    const reference = document.querySelector('.div2').nextElementSibling; // 隣の要素を取得する
+    const reference = document.querySelector('.div2').nextElementSibling; // 隣の要素を取得
     const newElement = document.createElement('div');
 
     newElement.classList.add('div4');
     newElement.textContent = '追加';
-    targetList.insertBefore(newElement, reference);
+    // targetList.insertBefore(newElement, reference);
 
   </script>
 </body>
