--- a/dom/modal/index.html
+++ b/dom/modal/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>modal</title>
   <script src="https://kit.fontawesome.com/4d60fe16e7.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="../css/app.css">
+  <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
 
