--- a/dom/form/index.html
+++ b/dom/form/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .w300 {
+      width: 300px;
+    }
+  </style>
 </head>
 <body>
   <div>
     <form action="" id="form_test1">
       <input type="text" name="your_name" value="インプット要素の値">
+      <div id="your_name_value"></div>
+
       <input type="email"  placeholder="入力してください" required>
       <select></select>
       <textarea></textarea>
@@ -19,6 +26,10 @@
   <div>
     <form action="" id="form_test2">
       <input type="text">あああ
+      
+      <input type="file" name="image_file">
+      <br>
+      <img src="" name="preview" class="w300" alt="">
       <button>送信</button>
     </form>
   </div>
